--- a/app/views/voters/edit.html.erb
+++ b/app/views/voters/edit.html.erb
@@ -42,4 +42,9 @@
   </div>
 
   <%= f.submit 'Submit' %>
-  <% end %>
+
+
+<% end %>
+
+<%= link_to "Delete this voter", voter_path(@voter), method: :delete,
+    data:{ confirm: 'Are you sure?' } %>
