--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,8 +1,13 @@
-<% @list.voters.each do |voter| %>
-  <%= link_to voter.full_name, voter %>
-  <%= link_to "Remove #{voter.full_name} from this list",
-    list_membership_path(ListMembership.where(
-                              voter_id: voter.id,
-                              list_id: @list.id)[0]),
-    method: :delete, data:{ confirm: 'Are you sure?' } %>
-<% end %>
+<%= link_to "View this list on a map", map_view_list_path %>
+<ul>
+  <% @list.voters.each do |voter| %>
+    <li>
+      <%= link_to voter.full_name, voter %>
+      <%= link_to "Remove #{voter.full_name} from this list",
+        list_membership_path(ListMembership.where(
+                                  voter_id: voter.id,
+                                  list_id: @list.id)[0]),
+        method: :delete, data:{ confirm: 'Are you sure?' } %>
+    </li>
+  <% end %>
+</ul>
