logging voters inpolygon in console

--- a/app/views/lists/map_view.html.erb
+++ b/app/views/lists/map_view.html.erb
@@ -39,14 +39,16 @@ var votersLayer = L.mapbox.featureLayer(voters).addTo(map);
 
 map.fitBounds(votersLayer.getBounds());
 
-map.on('draw:created', showPolygonArea);
+map.on('draw:created', findVoters);
 
-function showPolygonArea(e) {
+function findVoters(e) {
   var new_layer = map.addLayer(e.layer);
-  if (leafletPip.pointInLayer(marker.geometry.coordinates, new_layer).length > 0) {
-    alert("The point is in one of your shapes");
-  } else {
-    alert("The point is outside your shapes");
+  array = []
+  for (var i = 0; i < voters.length; i++) {
+    if (leafletPip.pointInLayer(voters[i].geometry.coordinates, new_layer, true)[0] === e.layer) {
+      array.push(voters[i]);
+    };
   };
+  console.log(array)
 }
 </script>
