--- a/app/views/voters/edit.html.erb
+++ b/app/views/voters/edit.html.erb
@@ -1,3 +1,8 @@
+<div class="row">
+  <div class= "small-5 columns">
+    <h1>Edit a new voter</h1>
+  </div>
+</div>
 <%= form_for @voter do |f| %>
   <%if @voter.errors.any? %>
   <ul>
@@ -6,45 +11,52 @@
     <% end %>
   </ul>
   <% end %>
-  <div>
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
+  <div class="row">
+    <div class= "small-5 columns">
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name %>
+    </div>
+
+    <div class= "small-5 columns left">
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name %>
+    </div>
+  </div>
+  <div class= "row">
+    <div class= "small-5 columns">
+      <div>
+        <%= f.label :address1 %>
+        <%= f.text_field :address1 %>
+      </div>
+
+      <div>
+        <%= f.label :address2 %>
+        <%= f.text_field :address2 %>
+      </div>
+    </div>
+
+    <div class= "small-5 columns left">
+      <div>
+        <%= f.label :city %>
+        <%= f.text_field :city %>
+      </div>
+
+      <div>
+        <%= f.label :state %>
+        <%= f.text_field :state %>
+      </div>
+
+      <div>
+        <%= f.label :zip %>
+        <%= f.text_field :zip %>
+      </div>
+    </div>
   </div>
 
-  <div>
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div>
-    <%= f.label :address1 %>
-    <%= f.text_field :address1 %>
-  </div>
-
-  <div>
-    <%= f.label :address2 %>
-    <%= f.text_field :address2 %>
-  </div>
-
-  <div>
-    <%= f.label :city %>
-    <%= f.text_field :city %>
-  </div>
-
-  <div>
-    <%= f.label :state %>
-    <%= f.text_field :state %>
-  </div>
-
-  <div>
-    <%= f.label :zip %>
-    <%= f.text_field :zip %>
-  </div>
-
-  <%= f.submit 'Submit' %>
+  <%= f.submit 'Update Voter', class: "button" %>
 
 
 <% end %>
 
 <%= link_to "Delete this voter", voter_path(@voter), method: :delete,
-    data:{ confirm: 'Are you sure?' } %>
+    data:{ confirm: 'Are you sure?' }, class: "button" %>
