--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,14 +1,33 @@
-<%= link_to "View this list on a map", map_view_list_path %>
-<ul>
+<div class="row">
+  <div class= "small-5 columns">
+    <h1><%= @list.name %></h1>
+  </div>
+</div>
+<table>
+  <thead>
+    <tr>
+      <th>Voter Name</th>
+      <th>Street Address</th>
+      <th>City</th>
+      <th>State</th>
+      <th>Zip</th>
+      <th>Remove?</th>
+    </tr>
+  </thead>
   <% @voters.each do |voter| %>
-    <li>
-      <%= link_to voter.full_name, voter %>
-      <%= link_to "Remove #{voter.full_name} from this list",
+    <tr>
+      <td><%= link_to voter.full_name, voter %></td>
+      <td><%= "#{voter.address1} #{voter.address2}" %></td>
+      <td><%= voter.city %></td>
+      <td><%= voter.state %></td>
+      <td><%= voter.zip %></td>
+      <td><%= link_to "Remove #{voter.first_name} from this list",
         list_membership_path(ListMembership.where(
                                   voter_id: voter.id,
                                   list_id: @list.id)[0]),
-        method: :delete, data:{ confirm: 'Are you sure?' } %>
-    </li>
+        method: :delete, data:{ confirm: 'Are you sure?' }, class: "button tiny expand" %></td>
+    </tr>
   <% end %>
-</ul>
+</table>
 <%= paginate @voters %>
+<%= link_to "View this list on a map", map_view_list_path, class: "button expand" %>
