--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -6,40 +6,47 @@
   <% end %>
 </ul>
 <% end %>
-<div>
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name %>
+<div class="row">
+  <div class= "small-5 columns">
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name %>
+  </div>
+
+  <div class= "small-5 columns left">
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %>
+  </div>
+</div>
+<div class= "row">
+  <div class= "small-5 columns">
+    <div>
+      <%= f.label :address1 %>
+      <%= f.text_field :address1 %>
+    </div>
+
+    <div>
+      <%= f.label :address2 %>
+      <%= f.text_field :address2 %>
+    </div>
+  </div>
+
+  <div class= "small-5 columns left">
+    <div>
+      <%= f.label :city %>
+      <%= f.text_field :city %>
+    </div>
+
+    <div>
+      <%= f.label :state %>
+      <%= f.text_field :state %>
+    </div>
+
+    <div>
+      <%= f.label :zip %>
+      <%= f.text_field :zip %>
+    </div>
+  </div>
 </div>
 
-<div>
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name %>
-</div>
-
-<div>
-  <%= f.label :address1 %>
-  <%= f.text_field :address1 %>
-</div>
-
-<div>
-  <%= f.label :address2 %>
-  <%= f.text_field :address2 %>
-</div>
-
-<div>
-  <%= f.label :city %>
-  <%= f.text_field :city %>
-</div>
-
-<div>
-  <%= f.label :state %>
-  <%= f.text_field :state %>
-</div>
-
-<div>
-  <%= f.label :zip %>
-  <%= f.text_field :zip %>
-</div>
-
-<%= f.submit 'Search' %>
+<%= f.submit 'Search', class: "button" %>
 <% end %>
