Fixed bug where one voter with bad coords would prevent display of list on map

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -30,6 +30,6 @@
 
 <%= f.hidden_field :search_id, value: @search.id %>
 
-<%= f.submit "Save this list" %>
+<%= f.submit "Save this list", class: "button" %>
 
 <% end %>
