--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,3 +1,8 @@
+<div class="row">
+  <div class= "small-5 columns">
+    <h1>Search Voters</h1>
+  </div>
+</div>
 <%= form_for @search do |f| %>
 <%if @search.errors.any? %>
 <ul>
