Tests written, implementation in progress

--- a/app/views/voters/new.html.erb
+++ b/app/views/voters/new.html.erb
@@ -56,3 +56,9 @@
 <%= f.submit 'Add this voter', class: "button" %>
 </div>
 <% end %>
+
+<h1>Upload Voters in CSV format</h1>
+<%= form_tag import_voters_path, multipart: true do %>
+  <%= file_field_tag :voters_csv %>
+  <%= submit_tag "Upload Voters" %>
+<% end %>
