--- a/app/views/voters/index.html.erb
+++ b/app/views/voters/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class= "small-5 columns">
-    <h1><%= @list.name %></h1>
+    <h1>All Voters</h1>
   </div>
 </div>
 <table>
@@ -11,7 +11,7 @@
       <th>City</th>
       <th>State</th>
       <th>Zip</th>
-      <th>Remove?</th>
+      <th>Edit</th>
     </tr>
   </thead>
   <% @voters.each do |voter| %>
@@ -21,11 +21,11 @@
     <td><%= voter.city %></td>
     <td><%= voter.state %></td>
     <td><%= voter.zip %></td>
-    <td><%= link_to "Remove #{voter.first_name} from this list",
-    list_membership_path(ListMembership.where(
-    voter_id: voter.id,
-    list_id: @list.id)[0]),
-    method: :delete, data:{ confirm: 'Are you sure?' }, class: "button tiny expand" %></td>
+    <td>
+      <div class="small-3 columns">
+        <%= link_to "Edit this voter", edit_voter_path(voter), class: "button" %>
+      </div>
+    </td>
   </tr>
   <% end %>
 </table>
