Completed contact form

--- a/app/views/voters/show.html.erb
+++ b/app/views/voters/show.html.erb
@@ -26,4 +26,7 @@
   <div class="small-3 columns">
     <%= link_to "Edit this voter", edit_voter_path, class: "button" %>
   </div>
+  <div class="small-3 columns">
+    <%= link_to "Log new contact", new_contact_path(@voter), class: "button" %>
+  </div>
 </div>
