Added ability to enter contacts from map

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -30,4 +30,5 @@
   <% end %>
 </table>
 <%= paginate @voters %>
-<%= link_to "View this list on a map", map_view_list_path, class: "button expand" %>
+<%= link_to "Cut turf from this list", map_view_list_path, class: "button" %>
+<%= link_to "Log contacts from map", contact_map_list_path, class: "button" %>
