--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,32 +3,34 @@
     <h1><%= @list.name %></h1>
   </div>
 </div>
-<table>
-  <thead>
-    <tr>
-      <th>Voter Name</th>
-      <th>Street Address</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Zip</th>
-      <th>Remove?</th>
-    </tr>
-  </thead>
-  <% @voters.each do |voter| %>
-    <tr>
-      <td><%= link_to voter.full_name, voter %></td>
-      <td><%= "#{voter.address1} #{voter.address2}" %></td>
-      <td><%= voter.city %></td>
-      <td><%= voter.state %></td>
-      <td><%= voter.zip %></td>
-      <td><%= link_to "Remove #{voter.first_name} from this list",
-        list_membership_path(ListMembership.where(
-                                  voter_id: voter.id,
-                                  list_id: @list.id)[0]),
-        method: :delete, data:{ confirm: 'Are you sure?' }, class: "button tiny expand" %></td>
-    </tr>
-  <% end %>
-</table>
-<%= paginate @voters %>
-<%= link_to "Cut turf from this list", map_view_list_path, class: "button" %>
-<%= link_to "Log contacts from map", contact_map_list_path, class: "button" %>
+<div class="row">
+  <table>
+    <thead>
+      <tr>
+        <th>Voter Name</th>
+        <th>Street Address</th>
+        <th>City</th>
+        <th>State</th>
+        <th>Zip</th>
+        <th>Remove?</th>
+      </tr>
+    </thead>
+    <% @voters.each do |voter| %>
+      <tr>
+        <td><%= link_to voter.full_name, voter %></td>
+        <td><%= "#{voter.address1} #{voter.address2}" %></td>
+        <td><%= voter.city %></td>
+        <td><%= voter.state %></td>
+        <td><%= voter.zip %></td>
+        <td><%= link_to "Remove #{voter.first_name} from this list",
+          list_membership_path(ListMembership.where(
+                                    voter_id: voter.id,
+                                    list_id: @list.id)[0]),
+          method: :delete, data:{ confirm: 'Are you sure?' }, class: "button tiny columns", style: "margin-top:12px" %></td>
+      </tr>
+    <% end %>
+  </table>
+  <%= paginate @voters %>
+  <%= link_to "Cut turf from this list", map_view_list_path, class: "button" %>
+  <%= link_to "Log contacts from map", contact_map_list_path, class: "button" %>
+</div>
