cleanup voter views

--- a/app/views/voters/new.html.erb
+++ b/app/views/voters/new.html.erb
@@ -11,6 +11,7 @@
   <% end %>
 </ul>
 <% end %>
+
 <div class="row">
   <div class= "small-5 columns">
     <%= f.label :first_name %>
@@ -57,8 +58,10 @@
 </div>
 <% end %>
 
+<div class="row">
 <h1>Upload Voters in CSV format</h1>
 <%= form_tag import_voters_path, multipart: true do %>
   <%= file_field_tag :voters_csv %>
   <%= submit_tag "Upload Voters", class: "button" %>
 <% end %>
+</div>
