--- a/app/views/voters/show.html.erb
+++ b/app/views/voters/show.html.erb
@@ -23,10 +23,10 @@
 <% end %>
 
 <div class="row">
-  <div class="small-3 columns">
+  <div class="columns">
     <%= link_to "Edit this voter", edit_voter_path, class: "button" %>
   </div>
-  <div class="small-3 columns">
+  <div class="columns">
     <%= link_to "Log new contact", new_contact_path(@voter), class: "button" %>
   </div>
 </div>
