Styling buttons and fonts

--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -55,6 +55,6 @@
     </div>
   </div>
 
-  <%= f.submit 'Search', class: "button" %>
+  <%= f.submit 'Search', class: "button round" %>
   <% end %>
 </div>
