--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -33,7 +33,7 @@
 
   <%= f.hidden_field :search_id, value: @search.id %>
 
-  <%= f.submit "Save this list", class: "button" %>
+  <%= f.submit "Save this list", class: "button round" %>
 
   <% end %>
 </div>
