--- a/app/views/voters/edit.html.erb
+++ b/app/views/voters/edit.html.erb
@@ -54,11 +54,11 @@
       </div>
     </div>
 
-    <%= f.submit 'Update Voter', class: "button" %>
+    <%= f.submit 'Update Voter', class: "button round" %>
 
 
   <% end %>
 
   <%= link_to "Delete this voter", voter_path(@voter), method: :delete,
-      data:{ confirm: 'Are you sure?' }, class: "button" %>
+      data:{ confirm: 'Are you sure?' }, class: "button round" %>
 </div>
