--- a/app/views/voters/index.html.erb
+++ b/app/views/voters/index.html.erb
@@ -23,7 +23,7 @@
       <td><%= voter.state %></td>
       <td><%= voter.zip %></td>
       <td>
-        <%= link_to "Edit this voter", edit_voter_path(voter), class: "button" %>
+        <%= link_to "Edit this voter", edit_voter_path(voter), class: "button round" %>
       </td>
     </tr>
     <% end %>
