--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -25,7 +25,7 @@
     <%= f.text_area :note %>
     <%= f.hidden_field :voter_id, value: @voter.id %>
     <%= f.hidden_field :user_id, value: current_user.id %>
-    <%= f.submit "Log Contact", class: "button inline"%>
+    <%= f.submit "Log Contact", class: "button round inline"%>
   </div>
 </div>
 <% end %>
