--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -26,11 +26,11 @@
           list_membership_path(ListMembership.where(
                                     voter_id: voter.id,
                                     list_id: @list.id)[0]),
-          method: :delete, data:{ confirm: 'Are you sure?' }, class: "button tiny columns", style: "margin-top:12px" %></td>
+          method: :delete, data:{ confirm: 'Are you sure?' }, class: "button round tiny columns", style: "margin-top:12px" %></td>
       </tr>
     <% end %>
   </table>
   <%= paginate @voters %>
-  <%= link_to "Cut turf from this list", map_view_list_path, class: "button" %>
-  <%= link_to "Log contacts from map", contact_map_list_path, class: "button" %>
+  <%= link_to "Cut turf from this list", map_view_list_path, class: "button round" %>
+  <%= link_to "Log contacts from map", contact_map_list_path, class: "button round" %>
 </div>
