--- a/app/views/lists/map_view.html.erb
+++ b/app/views/lists/map_view.html.erb
@@ -15,6 +15,8 @@ body { margin:0; padding:0; }
 <%= text_field_tag 'turf_name', 'List name', style: 'margin-top:1em' %>
 <div class='save button round right' >Save these turfs</div>
 </div>
+<div class='right small-2 columns turflist' style='background-color:#333333'>
+</div>
 
 <script>
 L.mapbox.accessToken = 'pk.eyJ1IjoiY2hyaXN3YW5kIiwiYSI6Ii15YVZETmcifQ.iwFzK-RnFcNDU_msz06eQQ';
@@ -72,6 +74,7 @@ function addTurf(e) {
     };
   };
   lists.push(votersInTurf);
+  $(".turflist").html(describeTurfs(lists));
 };
 
 function editTurf(e) {
@@ -87,6 +90,16 @@ function editTurf(e) {
   };
   turfsGroup.eachLayer(addTurf);
   votersLayer.setGeoJSON(voters);
+};
+
+function describeTurfs(turfsData) {
+  debugger;
+  var description = "<ul>";
+  for (var i = 0; i < turfsData.length; i++) {
+    description += "<li>Turf " + (i + 1) + "</li>";
+    };
+  description += "</ul>"
+  return description
 };
 
 $(document).ready(function(){
